# loxdb

./: .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  RELEASE_LOG.md  TODO.md  library.json  library.properties  microdb_agent_guide.md  microdb_spec.md
cmake/: loxdbConfig.cmake.in
docs/: API_REFERENCE.md  BACKEND_INTEGRATION_GUIDE.md  COOKBOOK.md  CORE_INVARIANTS.md  DOCS_MAP.md  EVIDENCE_MATRIX.md  FAIL_CODE_CONTRACT.md  FOOTPRINT_MIN_CONTRACT.md  FREE_EDITION_LICENSING.md  FS_BLOCK_ADAPTER_CONTRACT.md  GETTING_STARTED_5_MIN.md  IMPLEMENTATION_STATUS_VERIFIED.md  MANAGED_STRESS_BASELINES.md  MEGA_TEST_CHECKLIST_STATUS.md  OFFLINE_VERIFIER.md  PORT_AUTHORING_GUIDE.md  PRODUCT_BRIEF.md  PRODUCT_POSITIONING.md  PROFILE_GUARANTEES.md  PROGRAMMER_MANUAL.md  README.md  RELEASE_CHECKLIST.md  RELEASE_TAG_TEMPLATE.md  REL_CORRUPTION_CORPUS.md  SCHEMA_MIGRATION_GUIDE.md  THREAD_SAFETY.md  release-notes.md
include/: lox.h  lox_config.h  lox_cpp.hpp  microdb.h  microdb_backend_adapter.h  microdb_backend_aligned_adapter.h  microdb_backend_compat.h  microdb_backend_fs_adapter.h  microdb_backend_managed_adapter.h  microdb_backend_open.h  microdb_capacity_profile.h  microdb_cpp.hpp  microdb_cpp_storage_profile.hpp  microdb_import_export.h  microdb_json_wrapper.h
scripts/: apply-fs-matrix-thresholds.ps1  apply-managed-thresholds.ps1  build-baseline-rollup.ps1  finalize-fs-matrix-calibration.ps1  finalize-managed-calibration.ps1  (+3 more)
tests/consumer/install_c/: CMakeLists.txt  main.c
tests/consumer/install_cpp/: CMakeLists.txt  main.cpp
(+329 files in other folders)
